<resources>
    <string name="app_name">AZRIUS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="christian_friendships_made_easy">Christian Friendships Made Easy!</string>
    <string name="proverbs_27_17">Proverbs 27:17</string>
    <string name="witness_the_power_of_community">Discover the Power of Community!</string>
    <string name="engage_in_lively_forums_discover_inspiring_testimonies_and_share_your_prayer_requests_your_journey_to_a_supportive_christian_community_starts_here">Join lively forums, explore inspiring testimonies, and share your prayers. Start connecting today and find your place in a community where faith and encouragement thrive!</string>
    <string name="elevate_your_faith_journey">Stay Connected, Grow in Faith!</string>
    <string name="join_events_take_part_in_bible_quests_and_stay_connected_to_your_community_azurah_is_the_place_to_be_for_meaningful_christian_friendships">Join events, dive into Bible quests, and connect with fellow believers on Azrius. Whether you\'re new to the faith or have been a believer for a while, Azrius is the place for you!</string>
    <string name="join_azurah_today">Join Azurah today!</string>
    <string name="embark_on_a_transformative_journey_of_faith_and_friendship_sign_in_or_register_today_to_unlock_meaningful_connections_and_a_supportive_community_your_christian_friendships_await">Embark on a transformative journey of faith and friendship. Sign In or Register today to unlock meaningful connections and a supportive community. Your Christian friendships await!</string>
    <string name="get_started">Get Started?</string>
    <string name="returning_user">Returning User?</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="let_s_get_started_enter_your_details_below">Let\'s get started! Fill in your details below to sign up!</string>
    <string name="first_name">First Name</string>
    <string name="first_name_star">First Name*</string>
    <string name="last_name_star">Last Name*</string>
    <string name="email_address_star">Email Address*</string>
    <string name="password">Password*</string>
    <string name="sign_up">Sign Up</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="please_enter_the_verification_code_that_has_been_sent_to_your_email">Please enter the verification code sent to your email.</string>
    <string name="verify">Verify</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="events">Events</string>
    <string name="shop">Shop</string>
    <string name="profile">Profile</string>
    <string name="resend_code_in">Resend code in</string>
    <string name="didn_t_receive_the_code_please_check_your_spam_folder_or_resend_code">Didn\'t receive it? Check your spam folder or resend.
</string>
    <string name="resend">Resend</string>
    <string name="verification_complete">Verification Complete!</string>
    <string name="next">Next</string>
    <string name="create_a_username">Create a Username</string>
    <string name="your_username_can_be_1_to_30_characters_long_and_should_not_include_any_special_characters">Your username can be 3-30 characters long and shouldn\'t include special characters.</string>
    <string name="username_star">Username*</string>
    <string name="upload_your_profile_picture">Upload Your Profile Picture</string>
    <string name="upload_photo"><u>Upload Photo</u></string>
    <string name="upload_photo_video"><u>Upload Photo or Video</u></string>
    <string name="when_s_your_birthday">When\'s your birthday?</string>
    <string name="continue1">Continue</string>
    <string name="enter_your_location">Enter Your Location</string>
    <string name="please_select_your_location_from_the_drop_down_menu_to_connect_with_others_in_your_area">Select your country from the drop-down menu to connect with others nearby.</string>
    <string name="location">Location</string>
    <string name="how_far_along_are_you_in_your_christian_journey">How far along are you in your Christian journey?</string>
    <string name="interested_new_christian">Interested/New Christian</string>
    <string name="taking_the_next_steps">Taking the Next Steps</string>
    <string name="delving_deeper">Delving Deeper</string>
    <string name="choose_up_to_6_interests">Choose Up To 6 Interests</string>
    <string name="connect_with_like_minded_individuals_by_choosing_your_top_six_interests">Connect with like-minded individuals by choosing your top six interests.</string>
    <string name="choose_prompts_to_answer">Let\'s Personalise Your Profile!</string>
    <string name="prompts_help_others_get_to_know_you_better"> Choose up to 3 prompts to answer and let others get to know you better!</string>
    <string name="finish_setup">Finish Setup</string>
    <string name="add_another_prompt">Add Another Prompt</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="please_sign_into_your_account"> Let\'s get you signed in to your account.</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="please_enter_the_email_address_linked_to_your_account_and_we_ll_send_you_instructions_to_reset_your_password">Enter the email associated with your account to receive password reset instructions.</string>
    <string name="please_enter_the_email_address_linked_to_your_account_and_we_ll_send_you_instructions_to_reset_your_password1">Enter the new email address, and we\'ll send you a OTP to verify your email.</string>
    <string name="remember_your_password">Remember your password?</string>
    <string name="please_create_a_new_password_for_your_account">Please create a new password for your account.</string>
    <string name="new_password">New Password*</string>
    <string name="change_password">Change Password</string>
    <string name="lifespringchurch">\@lifespringchurch</string>
    <string name="follow">FOLLOW</string>
    <string name="all_that_time_i_had_eaten_no_rich_food_no_meat_or_wine_crossed_my_lips_and_i_used_no_fragrant_lotions_until_those_three_weeks_had_passed">\"All that time I had eaten no rich food. No meat or wine crossed my lips, and I used no fragrant lotions until those three weeks had passed.\"</string>
    <string name="community_hub">Community Hub</string>
    <string name="community_forum">Community Forum</string>
    <string name="join_a_group">Join a Group</string>
    <string name="bible_quests">Bible Quests</string>
    <string name="bible_quest_available">Bible Quest Available</string>
    <string name="explore_available_quests"><u>Explore available quests</u></string>
    <string name="prayer_request">Prayer Request</string>
    <string name="prayer_testimonies">Prayer Testimonies</string>
    <string name="support_and_pray_for_others_and_or_submit_your_prayer_requests_publicly">Support and pray for others, or share your own prayer requests publicly.</string>
    <string name="read_and_or_share_your_answered_prayers_publicly_and_inspire_others">Share your answered prayers to inspire others!
</string>
    <string name="view_more">View More</string>
    <string name="songs_of_the_week">Songs of the Week</string>
    <string name="search">Search...</string>
    <string name="search_by_category">Browse by Category</string>
    <string name="_3_replies">-- View 7 replies --</string>
    <string name="post_title">Title</string>
    <string name="choose_category">Choose Category</string>
    <string name="post_description">Post Description</string>
    <string name="_1000_characters">150 words</string>
    <string name="post">Post</string>
    <string name="search_bible_quests">Search Bible Quests</string>
    <string name="view_details">View Details</string>
    <string name="start_challenge">Start Challenge</string>
    <string name="view">View</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="book_ticket">Book Ticket</string>
    <string name="browse_events_by_categories">Browse Events by Category</string>
    <string name="buy_ticket">Buy Tickets</string>
    <string name="your_joined_groups">Your Joined Groups</string>
    <string name="explore_groups">Explore Groups</string>
    <string name="view_all">View All</string>
    <string name="view_group">View Group</string>
    <string name="join_group">Join Group</string>
    <string name="general">Personal</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmarked_events">Bookmarked Events</string>
    <string name="shop_now">Shop Now</string>
    <string name="all_colours">All colours</string>
    <string name="now_in_product">Now in (product)</string>
    <string name="visit_website">Visit website</string>
    <string name="featured_products">Featured Products</string>
    <string name="favourite_products">Favourite Products</string>
    <string name="categories">Categories</string>
    <string name="prayer_title">Prayer Title*</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_photo"><u>Change Profile Photo</u></string>
    <string name="save_changes">Save Changes</string>
    <string name="change_cover">Change Background</string>
    <string name="day">DAY</string>
    <string name="mark_as_complete">Mark as Complete</string>
    <string name="restart_challenge">Restart Quest</string>
    <string name="challenge_completed">Quest Completed!</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="post_settings">Post Settings</string>
    <string name="gallery">Gallery</string>
    <string name="tag_people">Tag People</string>
    <string name="add_location">Add Location</string>
    <string name="general_settings">General Settings</string>
    <string name="edit_personal_information">Edit Personal Information</string>
    <string name="past_activity">Past Activity</string>
    <string name="provide_feedback">Provide Feedback</string>
    <string name="faq_s">FAQ’s</string>
    <string name="review_our_privacy_policy_and_terms_conditions"><![CDATA[Review our Privacy Policy and Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="create_public_post">Create Public Post</string>
    <string name="title">Title*</string>
    <string name="your_title">Your Title</string>
    <string name="description">Description*</string>
    <string name="write_description_here">Write description here...</string>
    <string name="_300_words">300 words</string>
    <string name="send_message">Send Message</string>
    <string name="message_sent">Thank you for contacting us!</string>
    <string name="you_have_successfully_sent_a_message_we_aim_to_respond_to_you_within_72_hours">We\'ve received your message and will get back to you within 72 hours.</string>
    <string name="back_to_home">Back to Home</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are You Sure You Want to Delete Your Account?</string>
    <string name="this_action_is_irreversible_and_will_permanently_delete_all_your_data_including_your_profile_posts_and_connections_if_you_re_certain_about_deleting_your_account_please_enter_your_password_below_and_click_the_delete_account_button">This action is irreversible.</string>
    <string name="delete_account">Delete Account</string>
    <string name="buy_on_website">Buy on Website</string>
    <string name="please_sign_in_to_access_your_account">Please sign in to access your account.</string>
    <string name="select_photo">Select Photo</string>
    <string name="open_camera">Open Camera</string>
    <string name="pick_from_gallery">Pick From Gallery</string>
</resources>