<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.IntroFragment3">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image1"
        android:layout_width="0dp"
        android:layout_height="@dimen/_130sdp"
        android:layout_marginTop="@dimen/_110sdp"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="1dp"
        android:background="@color/white"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image1">


        <View
            android:id="@+id/view1"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/round_corner_background"
            android:backgroundTint="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/urbanist_semibold"
            android:gravity="center"
            android:text="@string/join_azurah_today"
            android:textColor="@color/intro_black"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1" />

        <TextView
            android:id="@+id/tvHeading1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/urbanist"
            android:gravity="center"
            android:text="@string/embark_on_a_transformative_journey_of_faith_and_friendship_sign_in_or_register_today_to_unlock_meaningful_connections_and_a_supportive_community_your_christian_friendships_await"
            android:textColor="@color/intro_black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeading" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:includeFontPadding="false"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="@dimen/_13sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:background="@drawable/round_corner_background"
            android:backgroundTint="@color/blue"
            app:layout_constraintTop_toBottomOf="@+id/tvHeading1"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tvReturningUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/returning_user"
            android:textColor="@color/intro_black"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toStartOf="@+id/tvSignIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnStart" />


        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:text="@string/sign_in"
            android:layout_marginStart="@dimen/_2sdp"
            android:textColor="@color/blue"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvReturningUser"
            app:layout_constraintTop_toBottomOf="@+id/btnStart" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>