<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvWelcomeBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:fontFamily="@font/urbanist_semibold"
                android:text="@string/welcome_back"
                android:textColor="@color/black"
                android:textSize="@dimen/_19sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:text="@string/please_sign_into_your_account"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWelcomeBack"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image1"
                android:layout_width="0dp"
                android:layout_height="@dimen/_170sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/azurah_app_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMessage"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlEmail"
                 style="@style/CustomTextInputLayout"
                android:theme="@style/EditTextThemeOverlay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/email_address_star"
                android:elevation="8dp"
                app:cursorColor="@color/cursor_color"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:expandedHintEnabled="false"
                app:hintTextAppearance="@style/TextLabel"
                android:textColorHint="@color/light_black"
                app:boxStrokeColor="@color/blue"
                app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
                app:boxCornerRadiusTopEnd="@dimen/_20sdp"
                app:boxCornerRadiusBottomStart="@dimen/_20sdp"
                app:boxCornerRadiusTopStart="@dimen/_20sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailAddrress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:paddingTop="20dp"
                    android:fontFamily="@font/poppins"
                    android:textColorHighlight="@color/cursor_color"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlPassword"
                 style="@style/CustomTextInputLayout"
                android:theme="@style/EditTextThemeOverlay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                app:expandedHintEnabled="false"
                app:hintTextAppearance="@style/TextLabel"
                android:textColorHint="@color/light_black"
                app:boxStrokeColor="@color/blue"
                app:passwordToggleEnabled="true"
                app:cursorColor="@color/cursor_color"
                app:passwordToggleTint="@color/black"
                app:passwordToggleDrawable="@drawable/password_toggle"
                app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
                app:boxCornerRadiusTopEnd="@dimen/_20sdp"
                app:boxCornerRadiusBottomStart="@dimen/_20sdp"
                app:boxCornerRadiusTopStart="@dimen/_20sdp"
                app:errorTextAppearance="@style/ErrorTextAppearance"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tlEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:paddingTop="20dp"
                    android:textColorHighlight="@color/cursor_color"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/black"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:includeFontPadding="false"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="@dimen/_13sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:background="@drawable/round_corner_background"
                android:backgroundTint="@color/button_grey"
                android:gravity="center"
                android:enabled="false"
                app:layout_constraintTop_toBottomOf="@+id/tlPassword"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tvDontAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constrainedWidth="true"
                android:layout_marginTop="@dimen/_24sdp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintEnd_toStartOf="@+id/tvSignUp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12sdp"
                app:layout_constrainedWidth="true"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_24sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvDontAccount"
                app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constrainedWidth="true"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_24sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSignUp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>