<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AddPromptFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:src="@drawable/back_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ivHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AZRIUS"
            android:layout_marginTop="@dimen/_16sdp"
            android:textColor="@color/black"
            android:includeFontPadding="false"
            android:fontFamily="@font/cinzel_bold"
            android:textSize="@dimen/_19sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <!--  <androidx.appcompat.widget.AppCompatImageView
              android:id="@+id/ivHeader"
              android:layout_width="@dimen/_70sdp"
              android:layout_height="@dimen/_30sdp"
              android:layout_marginTop="@dimen/_6sdp"
              android:src="@drawable/azurah_heading_icon"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" />-->

        <TextView
            android:id="@+id/tvSkip"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_26sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/skip"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12sdp"
            android:includeFontPadding="false"
            android:background="@drawable/round_stroke_background"
            android:paddingHorizontal="@dimen/_12sdp"
            android:backgroundTint="@color/grey"
            android:layout_marginEnd="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/ivHeader"
            app:layout_constraintTop_toTopOf="@+id/ivHeader"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvCreateUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/urbanist_semibold"
        android:text="@string/choose_prompts_to_answer"
        android:textColor="@color/black"
        android:textSize="@dimen/_19sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:text="@string/prompts_help_others_get_to_know_you_better"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateUsername"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPrompts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        tools:listitem="@layout/item_prompt"
        tools:itemCount="2"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMessage"
        app:layout_constraintBottom_toTopOf="@+id/tvAddPrompt"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvAddPrompt"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:text="@string/add_another_prompt"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:gravity="center"
        android:background="@drawable/round_corner_background"
        android:backgroundTint="@color/restart_color"
        android:fontFamily="@font/poppins_semibold"
        android:includeFontPadding="false"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@+id/btnFinish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:includeFontPadding="false"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="@dimen/_13sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:background="@drawable/round_corner_background"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_24sdp"
        android:text="@string/finish_setup"
        android:textAllCaps="false"
        android:textColor="@color/white"/>


</androidx.constraintlayout.widget.ConstraintLayout>